# PlaylistOrganizer

./: CMakeLists.txt  Makefile  README.md  main.cpp  playlist  runTests
include/: playlist.h  song.h
src/: main.cpp  playlist.cpp  song.cpp
tests/: duplicatesTest.csv  noDuplicatesTest.csv  song_tests.cpp  unit_tests.cpp
